<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>dev.lrxh</groupId>
        <artifactId>Loader</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>Client</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <repository>
            <id>papermc-repo</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
    </repositories>

    <dependencies>

        <dependency>
            <groupId>cc.fein.confluence</groupId>
            <artifactId>Confluence</artifactId>
            <version>1</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/server.jar</systemPath>
        </dependency>
  </dependencies>

</project>